First commited as before_67884_rev1